# Kraken-API-Interface-Implementation

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  build.sh  readme.org
kraken_trader/: CMakeLists.txt
kraken_trader/src/: kraken_interface.cpp  kraken_interface.hpp  main.cpp  order.cpp  order.hpp  text_user_interface.cpp  text_user_interface.hpp  trading_agent.cpp  trading_agent.hpp  view_controller.cpp  view_controller.hpp
kraken_trader/test/: api_test.cpp  order_test.cpp
krakenapi/: CMakeLists.txt
krakenapi/libjson/_internal/Source/JSONDefs/: GNU_C.h
